2008-01-09  Alexander Larsson  <alexl@redhat.com>

        * common/gmountsource.[ch]:
	Add g_mount_source_get_operation() that lets
	you handle a remote GMountSource as if it
	was a GMountOperation.
	
        * common/gmountoperationdbus.c:
        * programs/gvfs-mount.c:
	Update to new GMountOperation APIs
	
        * client/gdaemonfile.c:
        * daemon/gvfsjobmountmountable.[ch]:
	Also let you return target by uri, as not all
	targets are from gvfs.
	
        * daemon/gvfsbackendcomputer.c:
	Initial cut at mount_mountable

2008-01-09  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonvfs.c (_g_daemon_vfs_get_mount_info_sync):
	Better error return on not mounted.

2008-01-09  Luca Ferretti  <elle.uca@libero.it>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:

	Reuse intltool by now, glib-gettext rules seems unable
	to properly remove "[encoding: UTF-8]" generating
	po/POTFILES.
	
	* mkinstalldirs:

	Removed, autogenerated by intltool

2008-01-08  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.1 ===

2008-01-08  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release
	
2008-01-08  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Require glib 2.15.1

2008-01-08  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
        * daemon/computer.mount.in:
        * daemon/gvfsbackendcomputer.[ch]:
	Add initial computer backend
	
        * daemon/gvfsbackend.h:
        * daemon/gvfsjobunmountmountable.[ch]:
	Add umount_mountable calls

2008-01-07  Alexander Larsson  <alexl@redhat.com>

        * client/Makefile.am:
        * client/gdaemondirectorymonitor.[ch]:
        * client/gdaemonfile.c:
        * daemon/gvfsbackendtrash.c:
        * programs/gvfs-monitor-dir.c:
	Update to handle removed GDirectoryMonitor from
	API.
	
        * daemon/gvfsbackendsftp.c:
	Fix warnings

2008-01-07  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Remove debug spew